lesson2/codebase/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: { name: payment-service }
spec:
  host: payment-service
  subsets:
  - name: v1
    labels: { version: v1 }
  - name: v2
    labels: { version: v2 }
